{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 106,
  "lineage": "d86e6151-34d9-3f2a-aeb4-3be86b4a2b4c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:security-group/sg-0a08a274fb97f89e1",
            "description": "Allow traffic from ALB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a08a274fb97f89e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB ECS (HTTP)",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06bd25642df441859"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "cloud-cost-dashboard-ecs-sg",
            "name_prefix": "",
            "owner_id": "891377023859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-cost-dashboard-ecs-sg"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891377023859:loadbalancer/app/cloud-cost-dashboard-alb/a6ce88e845725621",
            "arn_suffix": "app/cloud-cost-dashboard-alb/a6ce88e845725621",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloud-cost-dashboard-alb-1384263558.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891377023859:loadbalancer/app/cloud-cost-dashboard-alb/a6ce88e845725621",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloud-cost-dashboard-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06bd25642df441859"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d4099bfdc5026ffb"
              },
              {
                "subnet_id": "subnet-0d511413ab5f562d7"
              }
            ],
            "subnets": [
              "subnet-0d4099bfdc5026ffb",
              "subnet-0d511413ab5f562d7"
            ],
            "tags": {
              "Name": "cloud-cost-dashboard-alb"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-alb"
            },
            "vpc_id": "vpc-0d36a8293f60d3d33",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891377023859:listener/app/cloud-cost-dashboard-alb/a6ce88e845725621/c43467f9404d0005",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:891377023859:targetgroup/cloud-cost-dashboard-tg/970975cbc7f329ec",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891377023859:listener/app/cloud-cost-dashboard-alb/a6ce88e845725621/c43467f9404d0005",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:891377023859:loadbalancer/app/cloud-cost-dashboard-alb/a6ce88e845725621",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.alb.aws_security_group.alb_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:891377023859:targetgroup/cloud-cost-dashboard-tg/970975cbc7f329ec",
            "arn_suffix": "targetgroup/cloud-cost-dashboard-tg/970975cbc7f329ec",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:891377023859:targetgroup/cloud-cost-dashboard-tg/970975cbc7f329ec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:891377023859:loadbalancer/app/cloud-cost-dashboard-alb/a6ce88e845725621"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloud-cost-dashboard-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:security-group/sg-06bd25642df441859",
            "description": "Allow HTTP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bd25642df441859",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloud-cost-dashboard-alb-sg",
            "name_prefix": "",
            "owner_id": "891377023859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-cost-dashboard-alb-sg"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:internet-gateway/igw-080c988824d1b609a",
            "id": "igw-080c988824d1b609a",
            "owner_id": "891377023859",
            "tags": {
              "Name": "cloud-cost-dashboard-igw"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-igw"
            },
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:route-table/rtb-0a18fe041c03b3ed5",
            "id": "rtb-0a18fe041c03b3ed5",
            "owner_id": "891377023859",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloud-cost-dashboard-private-rt"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:route-table/rtb-02e656812b64b9f1e",
            "id": "rtb-02e656812b64b9f1e",
            "owner_id": "891377023859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080c988824d1b609a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-cost-dashboard-public-rt"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd024857aec674d3",
            "route_table_id": "rtb-0a18fe041c03b3ed5",
            "subnet_id": "subnet-046884bfef6473bb8"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0187d05b76d385520",
            "route_table_id": "rtb-0a18fe041c03b3ed5",
            "subnet_id": "subnet-04693392be308d116"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f3b8b24632ce838",
            "route_table_id": "rtb-02e656812b64b9f1e",
            "subnet_id": "subnet-0d511413ab5f562d7"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed646e0140a252d2",
            "route_table_id": "rtb-02e656812b64b9f1e",
            "subnet_id": "subnet-0d4099bfdc5026ffb"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:subnet/subnet-046884bfef6473bb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046884bfef6473bb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377023859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-cost-dashboard-private-0"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-private-0"
            },
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:subnet/subnet-04693392be308d116",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04693392be308d116",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377023859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-cost-dashboard-private-1"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-private-1"
            },
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:subnet/subnet-0d511413ab5f562d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d511413ab5f562d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377023859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-cost-dashboard-public-0"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-public-0"
            },
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:subnet/subnet-0d4099bfdc5026ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4099bfdc5026ffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377023859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-cost-dashboard-public-1"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-public-1"
            },
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:vpc/vpc-0d36a8293f60d3d33",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09634f61fc5f0bef1",
            "default_route_table_id": "rtb-07322cf5eec71f3e3",
            "default_security_group_id": "sg-0ca5f8bf62476bda6",
            "dhcp_options_id": "dopt-0718353d0cd06d7c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d36a8293f60d3d33",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07322cf5eec71f3e3",
            "owner_id": "891377023859",
            "tags": {
              "Name": "cloud-cost-dashboard-vpc"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891377023859:security-group/sg-00ce89e94fece9e4b",
            "description": "Allow ECS to access RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ce89e94fece9e4b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a08a274fb97f89e1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cloud-cost-dashboard-db-sg",
            "name_prefix": "",
            "owner_id": "891377023859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-cost-dashboard-db-sg"
            },
            "tags_all": {
              "Name": "cloud-cost-dashboard-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d36a8293f60d3d33"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "module.alb.aws_security_group.alb_sg",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}